# Microbiome-GEM-Modeling_nick

./: .gitignore  README.md  Summary.md  pyproject.toml
migemox/downstream_analysis/: predict_microbe_contribution.py
migemox/pipeline/: community_fva_simulations.py  community_gem_builder.py  constraints.py  io_utils.py  main.py  model_utils.py
