[project]
name = "microbiome-gem-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cobra==0.29.1",
    "cplex>=22.1.0.0",
    "docplex==2.29.245",
    "numpy==1.26.4",
    "optlang>=1.8.3",
    "pandas==2.2.3",
    "psutil>=7.1.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
[tool.setuptools]
packages = ["migemox"]
